# waste_rl_project

./: README.md  app.py  inference.py  interface.py  openenv.yaml  pyproject.toml
server/: app.py
