[project]
name = "waste-rl-env"
version = "0.1.0"
description = "OpenEnv RL environment"
authors = [{ name = "Balaji" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
